# xteink-x4-commonplace-tool

./: .dockerignore  .gitignore  AGENT.md  ARCHITECTURE.md  AUDIT.md  CLAUDE.md  Dockerfile  Dockerfile.jenkins  IMPLEMENTATION.md  Jenkinsfile  PROJECT_SPEC.md  README.md  TESTING.md  TODO.md  conftest.py  docker-compose.yml  pyproject.toml  sync-progress.md  webui.md
test_scripts/: .env.jenkins.example  capture-screenshot.sh  init-vault.sh  recover-screenshot.sh  run-jenkins-pipeline.sh  test-document-hash.sh  test-full-pipeline.sh  test-koreader.sh  test-phase1.sh  test-phase2.sh  test-phase3.sh  test-phase4.sh  test-phase5.sh
tests/: test_api.py  test_archiver.py  test_book_pages.py  test_document_id.py  test_full_pipeline.py  test_koreader_sync.py  test_pages.py  test_state.py  test_status_display.py  test_vault_integration.py  test_vault_writer.py  test_watcher.py
web/: .gitignore  capacitor.config.ts  package-lock.json  package.json  vite.config.ts
web/android/app/: build.gradle
web/android/app/src/main/: AndroidManifest.xml
web/android/app/src/main/res/values/: strings.xml
web/src/lib/: api.test.ts  api.ts  panel.svelte.ts  relay.ts
web/src/lib/components/: BookCard.svelte  DateGroup.svelte  FontSizeControl.svelte  ReadingCalendar.svelte  RelayBar.svelte  ScreenshotCard.svelte  ScreenshotPanel.svelte  SidebarNotes.svelte  StatusWidget.svelte  TbrRow.svelte
web/src/routes/: +layout.svelte  +layout.ts  +page.svelte
web/src/routes/aliases/: +page.svelte  +page.ts
web/src/routes/books/: +page.svelte  +page.ts
web/src/routes/books/[book]/: +page.svelte  +page.ts
web/src/routes/highlights/: +page.svelte  +page.ts
web/src/routes/log/: +page.svelte  +page.ts
web/src/routes/search/: +page.svelte  +page.ts
web/src/routes/tbr/: +page.svelte  +page.ts
web/src/styles/: app.css
xteink_service/: __main__.py  alias.py  api.py  archiver.py  book_pages.py  capture.py  document_id.py  hash_books.py  koreader_sync.py  main.py  pages.py  state.py  status_display.py  sync_once.py  vault_writer.py  watcher.py
(+4 files in other folders)
