[project]
name = "xteink-service"
version = "0.1.0"
description = "Homelab service: archives Xteink X4 screenshots (with OCR) and KOReader progress into an Obsidian vault"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
dependencies = [
    "aiohttp>=3.9",
    "websockets>=12.0",
    "pillow>=10.0",
    "pytesseract>=0.3.10",
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "aiosqlite>=0.20",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "httpx>=0.28",
    "ruff>=0.5",
]

# The xteink_service/ package is run as a module (`python -m xteink_service`),
# not installed, so there is no [build-system]. package = false tells uv to
# resolve/install only the dependencies and skip building this project.
[tool.uv]
package = false

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
asyncio_mode = "auto"
pythonpath = ["."]
